<resources>
    <string name="app_name">Standheizung</string>
    <string name="action_settings">Settings</string>

    <string name="sms_sent">SMS sent</string>
    <string name="sms_not_sent">SMS not sent</string>
    <string name="sms_not_sent_no_service">SMS not sent - no service</string>
    <string name="sms_not_sent_no_radio">SMS not sent - no radio</string>
    <string name="sms_delivered">SMS delivered</string>
    <string name="sms_not_delivered">SMS not delivered</string>

    <string name="sms_cannot_send">Device can not send SMS</string>
    <string name="phone_number_invalid">Phone number is invalid</string>
    <string name="sms_no_permission">No permission to send SMS</string>
    <string name="sms_too_long">SMS is too long</string>
    <string name="turn_on_instant">Start</string>
    <string name="turn_off_instant">Stop</string>
    <string name="turn_on_timed">Setzen</string>
    <string name="turn_off_timed">Deaktivieren</string>
    <string name="get_status">Aktualisieren</string>

    <string name="leaving_time">Abfahrtzeit</string>
    <string name="duration">Laufzeit</string>
    <string name="temperature">Temperatur</string>
    <string name="battery">Battery</string>
    <string name="start_mode">Startmodus</string>
    <string name="header_two">Standheizung bedienen</string>
    <string name="status">Status</string>

    <string name="unknown_value">---</string>

    <string name="default_pin">0000</string>

</resources>
