<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="de.phenx.standheizung.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/textview_status"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/status" />

        <TextView
            android:id="@+id/textview_status_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/unknown_value" />
    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/textview_temperature"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature" />

        <TextView
            android:id="@+id/textview_temperature_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unknown_value" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/textview_battery"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/battery" />

        <TextView
            android:id="@+id/textview_battery_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unknown_value"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

    <Button
            android:id="@+id/button_status"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:onClick="refreshStatus"
            android:text="@string/get_status" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="#e0e0e0" />

-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/start_mode" />

        <Spinner
            android:id="@+id/spinner_start_modes"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/start_modes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/textview_duration"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/duration" />

        <Spinner
            android:id="@+id/spinner_duration"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:entries="@array/durations_minutes" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

        <TextView
            android:id="@+id/textview_leaving_time"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:text="@string/leaving_time" />

        <EditText
            android:id="@+id/edittext_leaving_time"
            android:layout_width="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp">

        <Button
            android:id="@+id/button_off"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:onClick="turnOff"
            android:text="@string/turn_off_instant" />

        <Button
            android:id="@+id/button_on"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:onClick="turnOn"
            android:text="@string/turn_on_instant" />
    </LinearLayout>

</LinearLayout>

